[workspace]
resolver = "2"

members = [
    "derive",
]

[workspace.package]
version = "0.2.5"
authors = ["Niland Schumacher <naschuma@ucsc.edu>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nilandasd/sandpit"

[package]
name = "sandpit"
description = "A concurrent garbage collected arena"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
derive = { path = "./derive" }
crossbeam-channel = "0.5.13"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "node_bench"
harness = false
