[workspace]
resolver = "2"

members = [
    "derive",
]

[workspace.package]
version = "0.2.5"
authors = ["Niland Schumacher <naschuma@ucsc.edu>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nilandasd/sandpit"
rust-version = "1.79.0"

[package]
name = "sandpit"
description = "A concurrent garbage collected arena"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
nimix = { git = "https://github.com/Nilando/nimix", branch = "main" }
sandpit_derive = { path = "./derive", version = "0.2.5" }
crossbeam-channel = "0.5.13"
higher-kinded-types = "0.1.1"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.4"

[[bench]]
name = "node_bench"
harness = false
