[workspace]
resolver = "2"

members = [
    "derive", "examples/linked_list",
]

[workspace.package]
version = "0.4.3"
authors = ["Niland Schumacher <naschuma@ucsc.edu>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nilandasd/sandpit"
rust-version = "1.79.0"

[package]
name = "sandpit"
description = "A concurrent garbage collected arena"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = []
multi_threaded = ["std", "dep:crossbeam-channel"]

[dependencies]
nimix = "0.2.0"
sandpit_derive = { path = "./derive", version = "0.4.1" }
crossbeam-channel = { version = "0.5.13", optional = true }
higher-kinded-types = "0.1.1"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.4"

[[bench]]
name = "bench"
harness = false

[profile.bench]
debug = true

#[profile.release]
#opt-level = 3
#lto = true
#strip = true
#panic = "abort"
#codegen-units = 1
