[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gc_derive = { path = "../gc_derive" }
gc = { path = "../gc" }
rand = "0.8.5"
expand = "0.3.0"


[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "node_bench"
harness = false

# set bench to debug when making flamegraph
[profile.bench]
debug = true
